@@ -1,6 +1,9 @@
 2011-03-16  Jan Nijtmans  <nijtmans@users.sf.net>
 
-	* unix/configure (autoconf-2.59)
+	* unix/tcl.m4:    Make SHLIB_LD_LIBS='${LIBS}' the default and
+	* unix/configure: set to "" on per-platform necessary basis.
+	Backported from TEA, but kept all original platform code which was
+	removed from TEA.
 
 2011-03-12  Jan Nijtmans  <nijtmans@users.sf.net>
 
